# TicoMon

./: # Crea un archivo .py  .env  .gitignore  README.md  admin.py  animacion_evolucion.py  cache_service.py  candy.py  captura_imagen.py  combate.py  combate_calc.py  combate_servicios.py  configuracion.py  cooldown.py  database.py  descargar_showdown_gifs.py  descargar_sprites.py  equipo_config.py  equipo_slash.py  errores.txt  evolutions.py  evos.py  fumo.py  fumo_data.db  fumo_data1.db  futbol.py  futbol_db.py  futbol_stats.py  gestor.py  gestor_spawn.py  imagencomb.py  import requests.py  import sqlite3.py  intercambio.py  inventario.py  ivs_commands.py  lista_spawn.txt  logger_config.py  main.py  mapeo_naturalezas.py  (+43 more)
animaciones/: animacion_captura.py
combate_v2/: director.py  eventos.py  motor.py  narrador.py  orquestador.py  paso.py  presentador.py
incursiones/: __init__.py  alpha_factory.py  alpha_factory.txt  alphas.py  comandos.py  combate_incursion.py  combate_raid.py  imagen_raid.py  incursion_manager.py  modelos.py  selector_incursion.py  test_raid_image.py  vista_combate_incursion.py  vista_incursion.py
mundo/: exploracion.py  imagen_mundo.py  mundo_manager.py  panel_safari.py  vista_exploracion.py  vista_mundo.py  world.py
mundo/test/: test_manager.py
tests/: test_mundo.py
