[project]
name = "ticomon"
version = "0.1.0"
description = ""
authors = [
    {name = "DarOrange",email = "naranjapi22@gmail.com"}
]
# Se eliminó la referencia al archivo readme para evitar errores de ruta
requires-python = ">=3.12"
dependencies = [
    "discord-py (>=2.7.1,<3.0.0)",
    "aiohttp (>=3.14.0,<4.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "cachetools (>=7.1.4,<8.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)"
]

[tool.poetry]
# Esto le dice a Poetry que no busque un paquete llamado ticomon en la raíz
packages = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"